compiler-core/src/parse/snapshots/gleam_core__parse__tests__no_let_binding_snapshot_1.snap
---
source: compiler-core/src/parse/tests.rs
expression: wibble = 4
---
----- SOURCE CODE
wibble = 4

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:8
  │
1 │ wibble = 4
  │        ^ There must be a 'let' to bind variable to value

See: https://tour.gleam.run/basics/assignments/

Hint: Use let for binding.
